# central-dots

./: .gitignore  CMakeLists.txt  README.md  main.cc
.github/workflows/: cmake.yml
dat/: dat.cc  dat.h
dot/: dot.cc  dot.h
include/: ctl.cc  dat.cc  dat.h  dot.h
